Mijn 1477 alignment issue + Feature toggle (#234)

--- a/src/components/AutoLogoutDialog/AutoLogoutDialog.module.scss
+++ b/src/components/AutoLogoutDialog/AutoLogoutDialog.module.scss
@@ -25,3 +25,7 @@
   display: block;
   margin-right: 2rem;
 }
+
+.LogoutButton {
+  align-items: center;
+}
